# processDMRs

./: .aiderignore  .coverage  .gitignore  CONVENTIONS.md  README.md  README.tex  Wed18  \  __init__.py  add_table24  app.py  app_db.py  biclique_visualization.py  create_component_details_view.sql  data_loader.py  data_processor.py  database_updates24  deepseek_models.sh  detail_view22  extensions.py  feb10  feb6  frontcore26  frontend24  generate_tikz.py  graph_layout.py  graph_utils.py  graph_visualize.py  jan22_visual  migrate_secondary_genes.sh  new_component_details_view.sql  new_tableFeb7  node_info.py  package-lock.json  package.json  processDMR.py  processDMR_sample.env  process_bicliques.py  process_data.py  pyproject.toml  (+21 more)
1. routes/: __init__.py
2. visualization/: traces.py
4. routes/: component_routes.py
4. visualization/: tables.py
5. visualization/: utils.py
6. visualization/: __init__.py
First, create `utils/: graph_utils.py
analysis/: timepoint_processor.py
backend/: app.py  requirements.txt  setup.py
backup/: component_routes.py  index_route.py  statistics_route.py
biclique_analysis/: __init__.py  analyzer.py  classifier.py  component_analyzer.py  components.py  edge_classification.py  edge_info.py  embeddings.py  processor.py  reader.py  reporting.py  statistics.py  triconnected.py
data/: DSS1.xlsx  DSS_PAIRWISE.xlsx  HOME1.xlsx  HOME_PAIRWISE.xlsx  bipartite_graph_output.txt  bipartite_graph_output.txt.biclusters  bipartite_graph_output.txt.biclusters_bad  bipartite_graph_output.txt.biclusters_bak  master_gene_ids.csv  (+8 more)
docs/: bib.md  (+4 more)
(+261 files in other folders)
