[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmr_analysis"
version = "0.0.4-alpha"
description = "DMR Analysis System"
authors = [{ name = "Peter Shaw" }]
requires-python = ">=3.8"
dependencies = [
  "flask>=2.0.0",
  "networkx>=2.6.0",
  "pandas>=1.3.0",
  "numpy>=1.20.0",
  "plotly>=5.3.0",
  "scikit-learn>=0.24.0",
  "openpyxl>=3.0.0",
  "xlrd>=2.0.0",
  "sqlalchemy>=1.4.0",
  "sqlalchemy-utils>=0.38.0",
  "psycopg2-binary>=2.9.0",
  "alembic>=1.7.0",
  "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
test = [
  "pytest>=6.0.0",
  "pytest-cov>=2.0.0",
  "pytest-postgresql>=3.1.0",
  "factory-boy>=3.2.0",
  "black>=21.0.0",
  "flake8>=3.9.0",
"mypy>=0.910",
]

[project.optional-dependencies.llm]
dependencies = [
"langchain>=0.1.0",
"anthropic>=0.3.0", 
"ollama>=0.1.0"
]

[tool.setuptools]
packages = ["dmr_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
